--- a/friendly-parakeet-main/Develop/index.html
+++ b/friendly-parakeet-main/Develop/index.html
@@ -15,6 +15,8 @@
       <div class="card">
         <div class="card-header">
           <h2>Generate a Password</h2>
+          <p>Include special charaters " !"#$%&'()*+,-./:;<=>?@[\]^_`{|}~"</p>
+          <p>Set length of password, between 8-128 characters</p>
         </div>
         <div class="card-body">
           <textarea
